deploy_ingress/staging-finance-ingress-for-cp-manage.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-for-cp-manage
  namespace: staging-finance
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: nginx
  rules:
  - host: finance.foxvspig.com
    http:
      paths:
      - backend:
          service:
            name: svc-cp-manage
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - finance.foxvspig.com
    secretName: ingress-for-cp-manage
